# python-nix-template

./: .actrc  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  .taplo.toml  .teller.yml  Makefile  README.md  flake.nix  justfile  manifest  package.json  pyproject.toml  ruff.toml  rust-toolchain.toml  wrangler.jsonc  wrangler.toml
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.dvc/: config
.github/: SECURITY.md  labels.yml  mergify.yml  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/build-nix-image/: action.yml
.github/actions/cached-ci-job/: action.yaml
.github/actions/setup-nix/: action.yml
.github/workflows/: build-nix-images.yaml  ci.yaml  deploy-docs.yaml  detect-changes.yaml  labeler.yaml  labeler.yml  package-release.yaml  python-build.yaml  python-release.yaml  python-test.yaml  template.yaml  update-flake-inputs.yaml  wheel-build.yaml  wheel-release.yaml
conda/: README.md  default_linux-64_conda_spec.txt  dev_osx-arm64_conda_spec.txt
docs/: .gitignore  _freeze.dvc  _quarto.yml  cdark.scss  clight.scss  index.qmd  references.bib
docs/about/: index.qmd
docs/concepts/: index.qmd
docs/development/: index.qmd
docs/development/architecture/: architecture.qmd  index.qmd
docs/development/context/: context.qmd  index.qmd
docs/development/requirements/: index.qmd  requirements.qmd
docs/development/traceability/: index.qmd  testing.qmd
docs/development/work-items/: index.qmd
docs/guides/: development.qmd  installation.qmd
docs/notes/architecture/: check-harvest-passthru-tests.md  crane-uv2nix-integration.md  package-distribution-channels.md
docs/tutorials/: getting-started.qmd
modules/: containers.nix  devshell.nix  flake-parts.nix  formatting.nix  git-env.nix  overrides.nix  packages.nix  pre-commit.nix  python.nix  template.nix
modules/checks/: invariants.nix  per-package.nix
nix/disabled/: containers-dev.nix.txt
nix/lib/: mk-multi-arch-manifest.nix
nix/modules/: containers.nix  devshell.nix  packages.nix  pre-commit.nix  python.nix  template-rename.nix  template.nix
scripts/: bootstrap.sh  monorepo_pyproject.patch  preview-version.sh  set-git-env.sh  sops-bootstrap.sh  sops-setup-github.sh
scripts/ci/: ci-build-category.sh  maximize-build-space.sh
src/mypackage/: __init__.py  main.py
src/mypackage/tests/: test_main.py
src/python_nix_template/: __init__.py  main.py
src/python_nix_template/tests/: test_main.py
vars/: dvc-gdrive.json  dvc-sa.json  shared.yaml
