[project]
description     = "A Python project template for Nix using uv2nix and flake-parts"
name            = "python-nix-template"
requires-python = ">=3.11,<3.13"
version         = "0.0.0"

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
addopts = """
-rA
--xdoctest
--disable-warnings
--cov=packages/
--cov-report=term-missing
--cov-report=xml
--durations=0
"""
log_level = "INFO"
testpaths = [
  "packages/**/src/**/tests",
]

[tool.coverage.run]
omit = [
  "packages/*/src/*/tests/*",
]


[tool.ruff]
line-length    = 88
src            = ["packages/**/src"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "W", # pycodestyle warnings
]
